--- a/homepage/index.html
+++ b/homepage/index.html
@@ -130,7 +130,7 @@
                     <br>
                     
                     <p>
-                        <label for="emailSU">EMAIL</label> &emsp;&nbsp;&nbsp;
+                        <label for="emailSU">EMAIL</label> 
                         <input class="inputBox" type="email" id="emailSU" name="emailSU" placeholder="email address" required> 
                     </p>
                     <p>
@@ -138,7 +138,7 @@
                         <input class="inputBox" type="text" id="usernameSU" name="usernameSU" placeholder="Username" required> 
                     </p>
                     <p>
-                        <label for="passwordSU">PASSWORD</label> &nbsp;
+                        <label for="passwordSU">PASSWORD</label> 
                         <input class="inputBox" type="password" name="passwordSU" id="passwordSU" placeholder="Password" required>
                     </p>
                     <p>
